--- a/styles/master.css
+++ b/styles/master.css
@@ -7,15 +7,46 @@ body {
 
 h1 {
     color: red;
-}
-a {
-    color: darkgreen;
-    text-decoration: none;
-}
-a:hover {
-    color: greenyellow
+    border-style: dashed;
+    border-width: 5px;
+    border-color: red;
+    border-radius: 5px;
+    text-align: center;
+    text-transform: uppercase;
 }
 
+a {
+    color: rgb(218, 241, 11);
+    text-decoration: none;
+    margin: auto;
+    vertical-align: 2px;
+}
+
+a:hover {
+    color: rgb(243, 101, 7);
+}
+
+
 section {
-    background: rgba(255,255,255, 0.2)
+     background: rgba(255,255,255, 0.2)
+}
+
+h4 {
+     background-color: rgb(247, 7, 7);
+     border: 5px groove rgb(187, 57, 57);
+     border-radius: 10px;
+}
+img {
+     display: block;
+     margin: 0 auto; 
+}
+
+p  {
+     text-shadow: 0.5px 1px rgb(18, 18, 167);
+     margin-left: 50px; /*Commentaires*/
+}
+
+h3 {
+    text-decoration: underline;
+    text-transform: capitalize;
 }
