--- a/styles/master.css
+++ b/styles/master.css
@@ -1,18 +1,21 @@
 body {
-    font-family: 'Noto Serif', serif;
-    background: url('https://images.unsplash.com/photo-1530631383307-4a02169e6133?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&w=1000&q=80') no-repeat fixed center;
+    font-family: 'Permanent Marker', serif;
+    background: url('http://s1.1zoom.me/big0/512/Lions_462377.jpg') no-repeat fixed center;
     background-size: cover;
-    color: #000;
+    color: rgb(245, 241, 241);
 }
 
 h1 {
-    color: red;
-    border-style: dashed;
+    color: #d80c05d8;
+    border-style: groove;
     border-width: 5px;
-    border-color: red;
+    border-color: rgb(248, 232, 8);
     border-radius: 5px;
     text-align: center;
     text-transform: uppercase;
+    background-color: rgb(107, 112, 117);
+    border: 3px groove rgb(91, 102, 105);
+    border-radius: 200px;
 }
 
 a {
@@ -23,18 +26,20 @@ a {
 }
 
 a:hover {
-    color: rgb(243, 101, 7);
+    color: rgb(255, 0, 0);
 }
 
 
 section {
-     background: rgba(255,255,255, 0.2)
+     background: rgba(102, 77, 77, 0.082);
 }
 
 h4 {
-     background-color: rgb(247, 7, 7);
-     border: 5px groove rgb(187, 57, 57);
-     border-radius: 10px;
+     background-color: rgb(29, 29, 31);
+     border: 5px groove rgb(83, 78, 78);
+     border-radius: 25px;
+     text-align: center;
+     font-size: 30px;
 }
 img {
      display: block;
@@ -42,11 +47,17 @@ img {
 }
 
 p  {
-     text-shadow: 0.5px 1px rgb(18, 18, 167);
      margin-left: 50px; /*Commentaires*/
+     font-size: 25px;
 }
 
 h3 {
     text-decoration: underline;
     text-transform: capitalize;
+    font-size:25px;
+}
+
+h5 {
+    font-size: 25px;
+    color: blanchedalmond;
 }
